# mini_faiss

./: CMakeLists.txt  README.md
mini_faiss/: CMakeLists.txt  index.cc
mini_faiss/include/: index.h  metricType.h
tests/: CMakeLists.txt  simple_test.cc
